--- a/resources/views/projects/edit.haml
+++ b/resources/views/projects/edit.haml
@@ -1,17 +1,17 @@
-!= View::make('support::shared.form._header', $__data)->render()
+!= View::make('pedreiro::shared.form._header', $__data)->render()
 %fieldset
 	.legend=empty($item)?'New':'Edit'
 	!= Former::text('title')
 	!= Former::textarea('body')
 	
-!= View::make('support::shared.form._footer', $__data)->render()
+!= View::make('pedreiro::shared.form._footer', $__data)->render()
 
 -#
 
 	- $sidebar->add(Former::listing('Stalker\Models\Video'))
 	- $sidebar->add(Former::listing('Stalker\Models\Photo')->take(30))
 
-	!= View::make('support::shared.form._header', $__data)->render()
+	!= View::make('pedreiro::shared.form._header', $__data)->render()
 
 	%fieldset
 		.legend= empty($item) ? 'New' : 'Edit'
@@ -29,7 +29,7 @@
 		!= Former::text('url', "URL")->blockHelp('An external link to the article.')
 
 	%fieldset
-		!= View::make('support::shared.form._display_module', $__data)->render()
+		!= View::make('pedreiro::shared.form._display_module', $__data)->render()
 		!= Former::boolean('featured')->blockHelp('Featured articles will show up in the ticker on the home page.')
 
-	!= View::make('support::shared.form._footer', $__data)->render()
+	!= View::make('pedreiro::shared.form._footer', $__data)->render()
